# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cactuar"
version = "0.1.0"
edition = "2021"

[dependencies]
# async runtime
tokio = { version = "1.25", features = ["full"] }
futures = "*" # use the futures version pulled in by tokio

# kubernetes dependencies
kube = { version = "0.78", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.17", features = ["v1_26"] }

# format utilities
serde = "1"
serde_json = "1"
serde_with = "2.2"
serde_yaml = "0.9"
schemars = "0.8"

# human-readable duration handling
duration-str = "0.4"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
console-subscriber = { version = "0.1", features = ["parking_lot"] }
tracing-log = "0.1"
tracing-error = "0.2"

# error spans
color-eyre = "0.6"
chrono = "0.4.23"
thiserror = "1.0.38"

# http
axum = "0.6.7"
hyper = "*" # use same version as axum
tower = "*" # use same version as axum

# metrics
prometheus = { version = "0.13.3", features = ["process"] }

# configuration
config = "0.13"

# temporary until we figure out various alert details to map to queries and
# provide a unique identifier
nanoid = "0.4.0"

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dev-dependencies]
pretty_assertions = "1.3"
